--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">LekhnathCCI</string>
+    <string name="fb_login_protocol_scheme">fb281388204270579</string>
+    <string name="facebook_app_id">281388204270579</string>
+    <string name="facebook_client_token">60f25989429b3550251462f3a49d04d6</string>
 </resources>
